--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,6 +9,8 @@
     background-color: #efefee;
     height: 100vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
 
  }
 
