--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,10 @@
     margin: 0;
  }
  
+ * {
+   font-family: Arial, Helvetica, sans-serif;
+   color: #333;
+ }
  .signInContainer {
     background-color: #efefee;
     height: 100vh;
@@ -20,6 +24,7 @@
     max-height: 100%;
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
+    padding: 20px 35px;
 }
 
 .column form {
@@ -48,4 +53,31 @@
    margin-bottom: 20px;
    font-size: 16px;
 }
+
+.column .header {
+   padding: 20px 0;
+}
+
+.column h3 {
+   font-size: 24px;
+   font-weight: 400;
+   line-height: 32px;
+   margin: 0;
+   padding-top: 16px;
+   color: #000;
+   
+    
+}
+
+.column .header span {
+   font-size: 14px;
+   
+}
+
+.column .header img {
+   width: 40px;
+
+}
+
+
 
