--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,6 +25,8 @@
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
     padding: 20px 35px;
+    box-sizing: border-box;
+    
 }
 
 .column form {
@@ -79,5 +81,10 @@
 
 }
 
+.signInMessage {
+   font-size: 14px;
+   font-weight: 400;
+   text-decoration: none;
 
+}
 
